[package]
name = "simple-cursor"
version = "0.1.0"
edition = "2021"
description = "A super simple character cursor implementation geared towards lexers/tokenizers."
license = "MIT/Apache-2.0"
repository = "https://github.com/LouisGariepy/simple-cursor"
keywords = ["cursor", "string", "tokenizer", "lexer", "iterator"]
categories = ["no-std", "no-std::no-alloc", "parsing", "algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
